plugins/kotlin/idea/tests/testData/checker/regression/ClassDeclarationAsExpression2.fir.kt
fun g() = 1 <error descr="[OVERLOAD_RESOLUTION_AMBIGUITY]"><</error> <error descr="[EXPRESSION_EXPECTED]">class A</error>
